# tandoori

./: .gitignore  LICENSE.md  Makefile  tandoori.cabal
executable/: Main.hs
src/: Sandbox.hs  Tandoori.hs
src/Tandoori/: GHC.hs  Typing.hs
src/Tandoori/GHC/: Internals.hs
src/Tandoori/Kludge/: Show.hs
src/Tandoori/Typing/: ClassDecl.hs  InstanceDecl.hs  Instantiate.hs  MonoEnv.hs  Pretty.hs  Repr.hs  Substitute.hs  Unify.hs  UnifyPred.hs
