name:                   tandoori
author:                 Érdi Gergő
version:                0.1.1
build-type:             Simple
cabal-version:          >= 1.10
category:               Language
copyright:              Copyright © 2010 Érdi Gergő <gergo@erdi.hu>
synopsis:               Compositional type checking for Haskell 98.
description:            Implementations of the traditional Hindley-Milner type system
                        can give poor error messages in some cases. This package
                        implements a type checker for a compositional type system that
                        is compatible with the Hindley-Milner type system extended by
                        typeclass polymorphism. See my MSc thesis at the package's
                        homepage for details.
extra-source-files:     README.md
license-file:           LICENSE.md
license:                BSD3
maintainer:             taktoa@gmail.com
                        
library
    build-depends:      base         >= 4.6 && < 5.0
                      , ghc          == 7.10.*
                      , text         == 1.2.*
                      , containers   == 0.5.*
                      , mtl          == 2.2.*
                      , transformers == 0.4.2.*
                      , boxes        == 0.1.*
                      , ghc-paths    == 0.1.*
                      , extra        == 1.4.*
                      , attoparsec   == 0.13.*
    default-language:   Haskell2010
    exposed-modules:    Tandoori
                        Tandoori.Supply
                        Tandoori.Guile.Parse
                        Tandoori.GHC
                        Tandoori.GHC.Internals
                        Tandoori.GHC.Parse
                        Tandoori.GHC.Scope
                        Tandoori.Typing
                        Tandoori.Typing.ClassDecl
                        Tandoori.Typing.Context
                        Tandoori.Typing.DataType
                        Tandoori.Typing.Error
                        Tandoori.Typing.Infer
                        Tandoori.Typing.InstanceDecl
                        Tandoori.Typing.Instantiate
                        Tandoori.Typing.Monad
                        Tandoori.Typing.MonoEnv
                        Tandoori.Typing.Pretty
                        Tandoori.Typing.Repr
                        Tandoori.Typing.Show
                        Tandoori.Typing.Substitute
                        Tandoori.Typing.Unify
                        Tandoori.Typing.UnifyPred
                        Control.Monad.Maybe
    ghc-options:        -w
    hs-source-dirs:     library
    default-extensions: OverloadedStrings

executable tandoori
    build-depends:      base
                      , tandoori
    default-language:   Haskell2010
    ghc-options:        -threaded
    hs-source-dirs:     executable
    main-is:            Main.hs

-- -fno-warn-incomplete-patterns -fno-warn-unused-binds
-- -fno-warn-unused-matches      -fno-warn-missing-signatures
-- -fno-warn-name-shadowing      -fno-warn-orphans
